--- a/public/profile.html
+++ b/public/profile.html
@@ -3,85 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>الملف الشخصي - SchoolX الأقصر</title>
+    <title>الملف الشخصي - SchoolX</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <style>
-        :root{--g:#d4af37;--d:#1a2526;--d2:#2a3a3b}
-        *{margin:0;padding:0;box-sizing:border-box}
-        body{
-            font-family:'Cairo',sans-serif;
-            background:#0f1419;
-            color:#fff;
-            min-height:100vh;
-            padding-bottom:72px;
-            font-size:12.8px;
-            line-height:1.4;
+        :root { --g: #d4af37; --d: #1a2526; --d2: #2a3a3b; }
+        * { margin:0; padding:0; box-sizing:border-box; }
+        body {
+            font-family: 'Cairo', sans-serif;
+            background: #0f1419;
+            color: #fff;
+            min-height: 100vh;
+            padding-bottom: 72px;
+            font-size: 12.8px;
+            line-height: 1.4;
         }
-        .c{padding:7px}
-        header{text-align:center;padding:10px 0}
-        .logo{width:42px;height:42px;border:2.5px solid var(--g);border-radius:50%;padding:3px;background:#fff}
-        h1{color:var(--g);font-size:1.12rem;margin-top:5px}
+        .c { padding: 7px; }
+        header { text-align: center; padding: 10px 0; }
+        .logo { width: 42px; height: 42px; border: 2.5px solid var(--g); border-radius: 50%; padding: 3px; background: #fff; }
+        h1 { color: var(--g); font-size: 1.12rem; margin-top: 5px; }
 
-        .card{
-            background:#fff;color:#111;border-radius:14px;overflow:hidden;
-            box-shadow:0 5px 18px rgba(0,0,0,0.5);margin:7px 0;
+        .card {
+            background: #fff; color: #111; border-radius: 14px; overflow: hidden;
+            box-shadow: 0 5px 18px rgba(0,0,0,0.5); margin: 7px 0;
         }
-        .ch{
-            background:linear-gradient(135deg,var(--g),#b8972e);
-            padding:11px 8px;text-align:center;color:#fff;
+        .ch {
+            background: linear-gradient(135deg, var(--g), #b8972e);
+            padding: 11px 8px; text-align: center; color: #fff;
         }
-        .ch h2{font-size:1.08rem;margin:3px 0}
-        #admin-badge{font-size:1.3rem}
+        .ch h2 { font-size: 1.08rem; margin: 3px 0; }
+        #admin-badge { font-size: 1.3rem; }
 
-        .p{padding:10px;text-align:center;background:#fafafa}
-        .p label{font-size:0.74rem;font-weight:bold;color:#333;margin-bottom:4px}
-        progress{width:100%;height:6px;border-radius:3px}
-        progress::-webkit-progress-value{background:var(--g);border-radius:3px}
-        #pp{margin-top:4px;font-size:0.98rem;color:var(--g);font-weight:bold}
+        .p { padding: 10px; text-align: center; background: #fafafa; }
+        .p label { font-size: 0.74rem; font-weight: bold; color: #333; margin-bottom: 4px; }
+        progress { width: 100%; height: 6px; border-radius: 3px; }
+        progress::-webkit-progress-value { background: var(--g); border-radius: 3px; }
+        #pp { margin-top: 4px; font-size: 0.98rem; color: var(--g); font-weight: bold; }
 
-        .f{padding:11px 9px}
-        .ig{margin-bottom:9px}
-        .ig label{font-size:0.73rem;color:#333;margin-bottom:3px;font-weight:600}
-        .ig input,.ig textarea{
-            width:100%;padding:7px 9px;border:1.8px solid var(--g);
-            border-radius:8px;font-size:0.81rem;background:#fdfdfd;
+        .f { padding: 11px 9px; }
+        .ig { margin-bottom: 9px; }
+        .ig label { font-size: 0.73rem; color: #333; margin-bottom: 3px; font-weight: 600; }
+        .ig input {
+            width: 100%; padding: 7px 9px; border: 1.8px solid var(--g);
+            border-radius: 8px; font-size: 0.81rem; background: #fdfdfd;
         }
-        .ig input:focus,.ig textarea:focus{outline:none;border-color:var(--d);background:#fff}
-        .ig input[disabled]{background:#f0f0f0;color:#777}
+        .ig input:focus { outline: none; border-color: var(--d); background: #fff; }
+        .ig input[disabled] { background: #f0f0f0; color: #777; }
 
-        .btn{
-            width:100%;padding:9px;background:var(--g);color:var(--d);
-            border:none;border-radius:9px;font-size:0.88rem;font-weight:bold;
-            cursor:pointer;margin-top:5px;
+        .btn {
+            width: 100%; padding: 9px; background: var(--g); color: var(--d);
+            border: none; border-radius: 9px; font-size: 0.88rem; font-weight: bold;
+            cursor: pointer; margin-top: 5px;
         }
-        .btn:hover{background:#b8972e}
+        .btn:hover { background: #b8972e; }
 
-        .nav{
-            position:fixed;bottom:0;left:0;right:0;
-            background:linear-gradient(180deg,var(--d),var(--d2));
-            padding:12px 20px 22px;display:flex;justify-content:space-around;
-            align-items:center;border-top-left-radius:24px;border-top-right-radius:24px;
-            border-top:3px solid var(--g);box-shadow:0 -8px 30px rgba(0,0,0,0.8);z-index:9999;
+        .nav {
+            position: fixed; bottom: 0; left: 0; right: 0;
+            background: linear-gradient(180deg, var(--d), var(--d2));
+            padding: 12px 20px 22px; display: flex; justify-content: space-around;
+            align-items: center; border-top-left-radius: 24px; border-top-right-radius: 24px;
+            border-top: 3px solid var(--g); box-shadow: 0 -8px 30px rgba(0,0,0,0.8); z-index: 9999;
         }
-        .nav::before{
-            content:'';position:absolute;top:-30px;left:50%;transform:translateX(-50%);
-            width:100px;height:50px;background:var(--g);border-radius:50%;opacity:0.2;filter:blur(20px);
+        .nav a {
+            color: var(--g); font-size: 1.45rem; padding: 10px 14px;
+            background: rgba(255,255,255,0.05); border-radius: 50%;
+            transition: all .4s ease; position: relative; backdrop-filter: blur(10px);
         }
-        .nav a{
-            color:var(--g);font-size:1.45rem;padding:10px 14px;
-            background:rgba(255,255,255,0.05);border-radius:50%;
-            transition:all .4s ease;position:relative;backdrop-filter:blur(10px);
+        .nav a.active {
+            color: #fff; background: var(--g); transform: translateY(-12px) scale(1.15);
+            box-shadow: 0 8px 25px rgba(212,175,55,0.6);
         }
-        .nav a.active{
-            color:#fff;background:var(--g);transform:translateY(-12px) scale(1.15);
-            box-shadow:0 8px 25px rgba(212,175,55,0.6);
-        }
-        .nav a.active::after{
-            content:'';position:absolute;bottom:-12px;left:50%;transform:translateX(-50%);
-            width:7px;height:7px;background:var(--g);border-radius:50%;box-shadow:0 0 20px var(--g);
+        .nav a.active::after {
+            content: ''; position: absolute; bottom: -12px; left: 50%; transform: translateX(-50%);
+            width: 7px; height: 7px; background: var(--g); border-radius: 50%; box-shadow: 0 0 20px var(--g);
         }
     </style>
 </head>
@@ -89,7 +85,7 @@
 
 <div class="c">
     <header>
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="logo.png" alt="شعار المعهد" class="logo">
         <h1>الملف الشخصي</h1>
     </header>
 
@@ -122,7 +118,7 @@
 
 <script>
 document.addEventListener('DOMContentLoaded', async () => {
-    // 1. جلب بيانات المستخدم من localStorage
+    // جلب بيانات المستخدم من localStorage (اللي حفظناه في login أو signup)
     const loggedInUser = JSON.parse(localStorage.getItem('loggedInUser'));
 
     if (!loggedInUser || !loggedInUser.username || !loggedInUser.type) {
@@ -134,7 +130,7 @@ document.addEventListener('DOMContentLoaded', async () => {
     const username = loggedInUser.username;
     const userType = loggedInUser.type; // student أو parent أو admin
 
-    // 2. تحديد الـ endpoint حسب النوع
+    // تحديد الـ endpoint بناءً على نوع المستخدم
     let endpoint;
     if (userType === 'student' || userType === 'parent') {
         endpoint = `/api/students/${username}`;
@@ -165,10 +161,10 @@ document.addEventListener('DOMContentLoaded', async () => {
         return;
     }
 
-    // 3. التأكد من وجود profile (حتى لو فاضي)
+    // التأكد من وجود profile (حتى لو فاضي)
     user.profile = user.profile || { phone: '', parentName: '', parentId: '' };
 
-    // 4. عرض البيانات تلقائيًا
+    // عرض البيانات تلقائيًا
     document.getElementById('user-name').textContent = user.fullName || user.username;
     document.getElementById('full-name').value = user.fullName || '';
     document.getElementById('username').value = user.username;
@@ -176,26 +172,26 @@ document.addEventListener('DOMContentLoaded', async () => {
     document.getElementById('parentName').value = user.profile.parentName || '';
     document.getElementById('parentId').value = user.profile.parentId || '';
 
-    // 5. حساب نسبة الاكتمال (من 3 حقول)
+    // حساب نسبة الاكتمال (3 حقول فقط)
     const fields = ['phone', 'parentName', 'parentId'];
     const completed = fields.filter(f => user.profile[f]?.trim()).length;
     const percentage = Math.round((completed / 3) * 100);
     document.getElementById('profile-progress').value = percentage;
     document.getElementById('progress-percentage').textContent = percentage + '%';
 
-    // 6. لو أدمن، يظهر البادج
+    // لو أدمن، يظهر البادج
     if (userType === 'admin') {
         document.getElementById('admin-badge').style.display = 'inline-block';
     }
 
-    // 7. رسالة ترحيب
+    // رسالة ترحيب
     Toastify({
         text: `أهلاً يا ${user.fullName?.split(' ')[0] || username}!`,
         backgroundColor: "#d4af37",
         duration: 4000
     }).showToast();
 
-    // 8. حفظ التعديلات
+    // حفظ التعديلات
     document.getElementById('profile-form').addEventListener('submit', async (e) => {
         e.preventDefault();
 
@@ -230,7 +226,7 @@ document.addEventListener('DOMContentLoaded', async () => {
         }
     });
 
-    // 9. الناف بار ديناميكي
+    // الناف بار ديناميكي
     const navItems = [
         { href: 'index.html', icon: 'fa-solid fa-house' },
         { href: 'Home.html', icon: 'fa-solid fa-chart-line' },
